# efm32-base

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt  ble-configuration.h  board_features.h  displayconfigapp.h
include/: app.h  app_hw.h  app_timer.h  app_ui.h  gatt_db.h  graphics.h  init_mcu.h
sdk/app/bluetooth/: CMakeLists.txt
sdk/hardware/: CMakeLists.txt
sdk/platform/: release-highlights.txt
sdk/platform/Device/SiliconLabs/: CMakeLists.txt
sdk/platform/base/hal/micro/cortexm3/: micro.c
sdk/platform/base/hal/micro/cortexm3/efm32/: hal-config.c  mfg-token.c  mfg-token.h  micro.c
sdk/platform/base/hal/plugin/serial/cortexm/efm32/: com.c
sdk/platform/bootloader/: CHANGELOG.md  CMakeLists.txt  esf.properties
sdk/platform/bootloader/api/: btl_interface.h  btl_interface_storage.h
sdk/platform/bootloader/config/: btl_config.h
sdk/platform/bootloader/core/: btl_main.c
sdk/platform/bootloader/core/GCC/: main_btl_startup.c
sdk/platform/bootloader/core/IAR/: main_btl_main_flash_se.icf  main_btl_startup.c
sdk/platform/bootloader/driver/: btl_driver_spi.c  btl_driver_spislave.c  btl_driver_uart.c
sdk/platform/bootloader/plugin/: plugins.info
sdk/platform/bootloader/plugin/communication/xmodem-uart/: btl_comm_xmodem.c
sdk/platform/bootloader/plugin/gpio-activation/: btl_gpio_activation.h
sdk/platform/bootloader/plugin/parser/: btl_image_parser.h
sdk/platform/bootloader/plugin/parser/ebl/: btl_ebl_parser.h
sdk/platform/bootloader/plugin/security/: btl_security_ecdsa.c  btl_security_tokens.c
sdk/platform/bootloader/plugin/storage/: btl_storage.c
sdk/platform/bootloader/plugin/storage/spiflash/: btl_storage_spiflash.h
sdk/platform/emdrv/: CMakeLists.txt
sdk/platform/halconfig/: CMakeLists.txt
sdk/platform/micrium_os/: micrium-krnx.properties
sdk/platform/micrium_os/bsp/siliconlabs/generic/source/: bsp_usb_dev.c
sdk/platform/middleware/glib/: CMakeLists.txt
sdk/platform/middleware/usb_gecko/: usb.cmake
sdk/platform/radio/rail_lib/: CMakeLists.txt
sdk/protocol/bluetooth/: CMakeLists.txt
sdk/protocol/bluetooth/ble_stack/api/: gecko.xml
sdk/protocol/flex/connect/plugins/ble/: ble-cli.c  ble-interface.c  plugin.properties
sdk/protocol/flex/connect/plugins/command-interpreter/: command-interpreter2.h
sdk/protocol/flex/connect/plugins/csp/: csp-enum-decode.c  csp-enum.h  csp-host.c  csp-ncp.c
sdk/protocol/flex/connect/plugins/idle-sleep/: idle-sleep.c
sdk/protocol/flex/connect/plugins/mailbox/mailbox-client/: plugin.properties
sdk/protocol/flex/connect/plugins/mailbox/mailbox-server/: mailbox-server.h
sdk/protocol/flex/connect/plugins/mbedtls/: plugin.properties  stack-overrides.c
sdk/protocol/flex/connect/plugins/micrium-rtos/: micrium-rtos-af-task.c  micrium-rtos-ipc-api-gen.c  micrium-rtos-ipc-api-gen.h  micrium-rtos-ipc-cb-gen.c  micrium-rtos-sleep.c  micrium-rtos-support.c  os_app_hooks.c  plugin.properties
sdk/protocol/flex/connect/plugins/ota-broadcast-bootloader/ota-broadcast-bootloader-client/: ota-broadcast-bootloader-client.h
sdk/protocol/flex/connect/plugins/ota-broadcast-bootloader/ota-broadcast-bootloader-server/: ota-broadcast-bootloader-server.h
sdk/protocol/flex/connect/plugins/ota-unicast-bootloader-test/: plugin.properties
sdk/protocol/flex/connect/plugins/ota-unicast-bootloader/ota-unicast-bootloader-client/: ota-unicast-bootloader-client.c  ota-unicast-bootloader-client.h  plugin.properties
sdk/protocol/flex/connect/plugins/ota-unicast-bootloader/ota-unicast-bootloader-server/: ota-unicast-bootloader-server.h
sdk/protocol/flex/connect/plugins/poll/: poll.h
sdk/protocol/flex/connect/plugins/stack/config/: config.h  ember-configuration-defaults.h  ember-configuration.c  token-stack.h
sdk/protocol/flex/connect/plugins/stack/include/: api-rename-undef.h  api-rename.h  ember-types.h  error-def.h  memory-buffer.h  message.h  network-management.h  stack-info.h
source/: advertisement.c  app.c  app_hw.c  app_ui.c  application_properties.c  beacon.c  gatt_db.c  graphics.c  htm.c  ia.c  init_app.c  init_board.c  init_mcu.c  main.c  pti.c
toolchain/: arm-gcc.cmake  efm32-base.cmake
